--- a/Archive.html
+++ b/Archive.html
@@ -26,7 +26,7 @@ pageTracker._trackPageview();
         
         <div id="menu">
     	<ul>
-            	<li class="menuitem"><a href="./index.html">Home</a></li>
+				<li class="menuitem"><a href="./index.php">Home</a></li>
                 <li class="menuitem"><a href="./live.html">Listen Live</a></li>
                 <li class="menuitem"><a href="./schedule.html">Schedule</a></li>
 				<li class="menuitem"><a href="./contact.html">Contact</a></li>
@@ -39,10 +39,11 @@ pageTracker._trackPageview();
 			<div id="leftmenu_top"></div>
 				<div id="leftmenu_main">                   
                 <h3>Our Links</h3>
-                 <ul>
-                    <li><a href="./DJ_Page.html">Our DJ's</a></li>
+                <ul>
+                    <li><a href="./DJ_Page.php">Our DJ's</a></li>
                     <li><a href="./events.html">Our Events</a></li>
                     <li><a href="./Photos.html">Our Photos</a></li>
+					<li><a href="./blog.php">Our Blog</a></li>
                 </ul>
 		</div>
 		<div id="leftmenu_bottom"></div>
