--- a/events.html
+++ b/events.html
@@ -27,7 +27,7 @@ pageTracker._trackPageview();
         
         <div id="menu">
         	<ul>
-            	<li class="menuitem"><a href="./index.html">Home</a></li>
+            	<li class="menuitem"><a href="./index.php">Home</a></li>
                 <li class="menuitem"><a href="./live.html">Listen Live</a></li>
                 <li class="menuitem"><a href="./schedule.html">Schedule</a></li>
 				<li class="menuitem"><a href="./contact.html">Contact</a></li>
@@ -42,11 +42,15 @@ pageTracker._trackPageview();
         
         <div id="content_top"></div>
         <div id="content_main">
-        	<h2>Welcome to North Cotswold Community Radio (test Site) </h2>
-        	<p>&nbsp;</p>
-           	<p>&nbsp;</p>
+        	<h2>Welcome to North Cotswold Community Radio Events</h2>
+        	<p>&nbsp;</p>     	
        	  <h3>NCCR - Our Events</h3>
-       	  <p>Check out or past and future events here, NCCR has a number of concerts and events we attend. Including the annual Moreton Show, broadcasting on 87.7 FM </p>
+       	  <p>Find out about our future events here, NCCR has a number of concerts and events that we organise and attend, including our annual live broadcast from Moreton-In-Marsh Show, usually on 87.7 FM </p>
+			<p>&nbsp;</p>
+			<h3>Holding an event ?</h3>
+			<p>&nbsp;</p>
+       	  <p>NCCR is always interested in attending events, which could involve interviewing the organiser for promoting the event, to providing a scheduled radio show. Get 
+		  in touch to find out if we can help</p>
 
 		 </div>
 		 
