--- a/listenAgain.html
+++ b/listenAgain.html
@@ -1,8 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang ="en>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
 <link rel="stylesheet" type="text/css" href="style.css" />
 <title>NCCR</title>
    <script type="text/javascript">
@@ -24,7 +26,7 @@ pageTracker._trackPageview();
         </div>    
         <div id="menu">
 			<ul>
-            	<li class="menuitem"><a href="./index.html">Home</a></li>
+            	<li class="menuitem"><a href="./index.php">Home</a></li>
                 <li class="menuitem"><a href="./live.html">Listen Live</a></li>
                 <li class="menuitem"><a href="./schedule.html">Schedule</a></li>
 				<li class="menuitem"><a href="./contact.html">Contact</a></li>
@@ -53,7 +55,7 @@ pageTracker._trackPageview();
 						</td>
 						<td class="listen">
 							<h3>The Sound</h3>
-							<audio src="http://www.nccr.co.uk/mp3/AfterSchool.mp3" controls></audio>
+							<audio src="http://www.nccr.co.uk/mp3/MO_18_The_Sound.mp3" controls></audio>
 						</td>
 					</tr>
 					<tr>
@@ -102,8 +104,8 @@ pageTracker._trackPageview();
 							<audio src="http://www.nccr.co.uk/mp3/AWES_awasome.mp3" controls></audio>
 						</td>
 						<td>
-							<h3>Pop Go The Pirates</h3>
-							<audio src="http://www.nccr.co.uk/mp3/PGTP_PopGothePirates.mp3" controls></audio>
+							<h3>Red</h3>
+							<audio src="http://www.nccr.co.uk/mp3/WE_18_Red.mp3" controls></audio>
 						</td>
 					</tr>
 					<tr>
@@ -127,12 +129,6 @@ pageTracker._trackPageview();
 						<td>
 							<h3>The Laurel & Jase Show</h3>
 							<audio src="http://www.nccr.co.uk/mp3/TIUT_CotswoldCommunity.mp3" controls></audio>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<h3>The Folk Hour</h3>
-							<audio src="http://www.nccr.co.uk/mp3/FolkHour_TheFolkHour.mp3" controls></audio>
 						</td>
 					</tr>
 <!--Fridays Listen again -->
